# 001-todo-phase-I

./: .gitignore  CLAUDE.md  ENV_VARIABLES.md  KUBERNETES_DEPLOYMENT.md  LOCAL_SETUP.md  PHASE4_DEPLOYMENT.md  PHASE4_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PROJECT_RENAME_SUMMARY.md  README.md  demonstration.py  deploy.sh  docker-compose.yml  requirements.txt  start-all.bat  start-backend.bat  start-frontend.bat  start_phase3.bat  start_phase3.sh
.specify/memory/: constitution.md
backend/: .dockerignore  .env  .env.backup  Dockerfile  README.md  clean_database.py  pyproject.toml  requirements.txt  reset_database.py  test_gemini.py
backend/app/: config.py  database.py  errors.py  main.py
backend/app/agents/: __init__.py  task_agent.py  task_agent_groq.py  task_agent_simple.py
backend/app/api/: __init__.py  auth.py  chat.py  deps.py  tasks.py
backend/app/core/: security.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/services/: agent_service.py  task_service.py
backend/tests/: test_database.py  test_main.py  test_tasks.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  test-api.html
frontend/src/: App.tsx  index.css
history/adr/: 004-kubernetes-orchestration.md
k8s/: backend-deployment.yaml  backend-service.yaml  create-secrets.sh  frontend-deployment.yaml  frontend-service.yaml  secrets.yaml
specs/: 002-web-api.spec.md  003-frontend-ui.spec.md  architecture.md  phase-4-kubernetes.md
specs/001-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+72 files in other folders)
